fix(body): remove overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   color: #000000;
-  overflow: hidden;
 }
 
 code {
